pushing changes to host on railway

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-yfinance
-asyncio
-langchain-mcp-adapters
-langchain-openai
-langgraph
-fastmcp
-streamlit
+yfinance>=0.2.36
+asyncio>=3.4.3
+langchain-mcp-adapters>=0.0.1
+langchain-openai>=0.0.5
+langgraph>=0.0.20
+fastmcp>=0.0.1
+streamlit>=1.32.0
 openai>=1.0.0
 plotly>=5.0.0
+python-dotenv>=1.0.0
+pandas>=2.0.0
